[package]
name = "benchmarks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
rand = { version = "0.8.5", features = ["small_rng"] }
sux = { path="../" }

[profile.release]
opt-level = 3             # like --release
lto = "fat"               # Full LTO
overflow-checks = false   # Disable integer overflow checks.
debug = false             # Include debug info.
debug-assertions = false  # Enables debug assertions.
codegen-units=1           # slower compile times, but maybe better perf
